# LiwusAPP

./: README.md  app.py  pyproject.toml  service-worker.js
templates/: CALL_HISTORY_TEMPLATE.html  CALL_TEMPLATE.html  CHAT_TEMPLATE.html  CONTACTS_TEMPLATE.html  LIG_TEMPLATE.html  LOGIN_TEMPLATE.html  REGISTER_TEMPLATE.html
